add `setJSON` and `getJSON` function

--- a/demo-app/app/app.component.html
+++ b/demo-app/app/app.component.html
@@ -1,1 +1,11 @@
-<h1>{{ cookieValue }}</h1>
+<section>
+  <p>get test:</p>
+  <h1>{{ cookieValue }}</h1>
+</section>
+
+<section>
+  <p>get json test:</p>
+  <h1>
+    <pre>{{ objectValue }}</pre>
+  </h1>
+</section>
