feat(core): adds SSR demo

--- a/projects/ngx-cookie-service-ssr-demo/src/app/home/home.component.html
+++ b/projects/ngx-cookie-service-ssr-demo/src/app/home/home.component.html
@@ -1,13 +1,13 @@
-<div style="display: flex">
-	<div style="margin-left: auto; margin-right: auto">
-		<h2>Welcome Home, {{ userDisplayName }}</h2>
-		<br />
+<div style="display: flex; margin: 20px">
+  <div style="margin-left: auto; margin-right: auto">
+    <h2>Welcome Home, {{ user.value()?.firstName }} {{ user.value()?.lastName }}</h2>
+    <br />
 
-		<label
-			>Cookie created with value: <strong>{{ token }}</strong></label
-		>
-		<br />
+    <div>
+      Cookie created with value: <strong>{{ token }}</strong>
+    </div>
+    <br />
 
-		<button (click)="logout()" color="warn" mat-raised-button style="margin-top: 50px" type="submit">Logout</button>
-	</div>
+    <button (click)="logout()" color="warn" matButton="filled" style="margin-top: 20px" type="submit">Logout</button>
+  </div>
 </div>
