feat(ssr): adds the ability to create cookie on server side

--- a/projects/ngx-cookie-service-ssr-demo/src/app/home/home.component.html
+++ b/projects/ngx-cookie-service-ssr-demo/src/app/home/home.component.html
@@ -4,7 +4,10 @@
     <br />
 
     <div>
-      Cookie created with value: <strong>{{ token }}</strong>
+      Regular cookie: <strong>{{ token }}</strong>
+    </div>
+    <div>
+      Serverside set cookie: <strong>{{ serverCookieValue || 'Not found (yet)' }}</strong>
     </div>
     <br />
 
